--- a/config/connect-avro-docker.properties
+++ b/config/connect-avro-docker.properties
@@ -2,17 +2,19 @@
 # integrates the the SchemaConfig Registry. This sample configuration assumes a local installation of
 # Confluent Platform with all services running on their default ports.
 # Bootstrap Kafka servers. If multiple servers are specified, they should be comma-separated.
-bootstrap.servers=confluent:9092
+bootstrap.servers=kafka:9092
 # The converters specify the format of data in Kafka and how to translate it into Connect data.
 # Every Connect user will need to configure these based on the format they want their data in
 # when loaded from or stored into Kafka
-key.converter=io.confluent.connect.avro.AvroConverter
-key.converter.schema.registry.url=http://confluent:8081
-value.converter=io.confluent.connect.avro.AvroConverter
-value.converter.schema.registry.url=http://confluent:8081
+# key.converter=io.confluent.connect.avro.AvroConverter
+# key.converter.schema.registry.url=http://confluent:8081
+# value.converter=io.confluent.connect.avro.AvroConverter
+# value.converter.schema.registry.url=http://confluent:8081
 # The internal converter used for offsets and config data is configurable and must be specified,
 # but most users will always want to use the built-in default. Offset and config data is never
 # visible outside of Connect in this format.
+key.converter=org.apache.kafka.connect.storage.StringConverter
+value.converter=org.apache.kafka.connect.storage.StringConverter
 internal.key.converter=org.apache.kafka.connect.json.JsonConverter
 internal.value.converter=org.apache.kafka.connect.json.JsonConverter
 internal.key.converter.schemas.enable=false
@@ -26,4 +28,4 @@ offset.storage.file.filename=/tmp/connect.offsets
 # consumer.interceptor.classes=io.confluent.monitoring.clients.interceptor.MonitoringConsumerInterceptor
 
 # Load our plugin from the output path.
-plugin.path=target/kafka-connect-target
+plugin.path=/iceberg/target/kafka-connect-target
